@@ -496,9 +496,6 @@ else {
   }
 }
 
-# set the env var stem
-$ENV{'STEM'} = "linux";
-
 sub run_hook {
   my $type   = shift;
   my $script = shift;
