@@ -144,9 +144,6 @@ sub image_magic {
   }
 }
 
-# set the env var stem
-$ENV{'STEM'} = "linux";
-
 sub system_failure_message {
   if ($? < 0) {
     return "$!";
