@@ -36,9 +36,6 @@ if (-r "$CONF_LOC" && -f "$CONF_LOC"  ) {
   }
 }
 
-# set the env var stem
-$ENV{'STEM'} = "linux";
-
 sub system_failure_message {
   if ($? < 0) {
     return "$!";
