@@ -81,9 +81,6 @@ if ($running eq $version) {
 
 chdir("/") or die "could not chdir to /:$!\n";
 
-# set the env var stem
-$ENV{'STEM'} = "linux";
-
 sub system_failure_message {
   if ($? < 0) {
     return "$!";
