@@ -20,6 +20,7 @@ linux (4.6-1~exp2) UNRELEASED; urgency=medium
   * [mips{,64}r6{,el}] Add kernel flavours for the Malta platform; build
     linux-libc-dev and tools packages (Closes: #825024; thanks to YunQiang Su)
   * [mips*/*-malta] udeb: Add ata-modules package
+  * linux-image: Stop setting $STEM in environment for maintainer script hooks
 
   [ Aurelien Jarno ]
   * [mips64{,el}] Set CPU to MIPS64 R2.
